--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["env", "react"],
-  "plugins": ["transform-class-properties"]
-   "ignore": ["node_modules"]
+  "plugins": ["transform-class-properties"],
+   "ignore": ["node_modules"],
+     "sourceType": "unambiguous"
 }
