--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["env", "react"],
+  "presets": ["env", "react", "es2015"],
   "plugins": ["transform-class-properties"],
    "ignore": ["node_modules"],
      "sourceType": "unambiguous"
